# baikal

./: setup.cfg
baikal/: i18n.py  version.py
baikal/cmd/: api.py
baikal/common/: config.py  exception.py
