[metadata]
name = baikal
summary = OpenStack Image Service
description_file =
    README.me
author = WenRui Gong
author_email = gongwr@qq.com
home_page = https://gongwr.com/baikal/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/baikal =
        etc/baikal-api.conf
    etc/baikal/metadefs = etc/metadefs/*
packages =
    baikal

[entry_points]
console_scripts =
    baikal-api = baikal.cmd.api:main
oslo.config.opts =
    baikal.api = baikal.opts:list_api_opts
    baikal.scrubber = baikal.opts:list_scrubber_opts
    baikal.cache= baikal.opts:list_cache_opts
    baikal.manage = baikal.opts:list_manage_opts
    baikal = baikal.opts:list_image_import_opts
oslo.config.opts.defaults =
    baikal.api = baikal.common.config:set_config_defaults
baikal.database.metadata_backend =
    sqlalchemy = baikal.db.sqlalchemy.metadata

oslo.policy.enforcer =
    baikal = baikal.api.policy:get_enforcer
oslo.policy.policies =
    baikal = baikal.policies:list_rules

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

